[package]
name = "code_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
pbo_tools = { path = "../pbo_tools" }
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
walkdir = "2.5.0"
log = "0.4.26"
env_logger = "0.11.6"
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder", "yaml_format"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
toml = "0.8.20"
sha2 = "0.10.8"
anyhow = "1.0.97"
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
chrono = { version = "0.4.40", features = ["serde"] }
once_cell = "1.20.3"
num_cpus = "1.16.0"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.1"
tempfile = "3.18.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
