[package]
name = "code_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
anyhow = "1.0.97"
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
chrono = { version = "0.4.40", features = ["serde"] }
once_cell = "1.20.3"
num_cpus = "1.16.0"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.18.0"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
